@@ -276,7 +276,7 @@
 	<version>3.2.5</version>
 	<configuration>
 	  <testSourceDirectory>src/test/java</testSourceDirectory>
-	  <argLine>-Xss4m -Dpolyglot.engine.WarnInterpreterOnly=false</argLine>
+	  <argLine>-Xss4m -Dpolyglot.engine.WarnInterpreterOnly=false --enable-native-access=ALL-UNNAMED</argLine>
 	  <includes>
 	    <include>**/cloffle/**Test.java</include>
 	  </includes>
@@ -375,6 +375,35 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>repl</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+              <mainClass>net.javacrumbs.cloffle.CloffleREPL</mainClass>
+              <classpathScope>compile</classpathScope>
+              <arguments/>
+              <systemProperties>
+                <systemProperty>
+                  <key>polyglot.engine.WarnInterpreterOnly</key>
+                  <value>false</value>
+                </systemProperty>
+                <systemProperty>
+                  <key>polyglotimpl.DisableClassPathIsolation</key>
+                  <value>true</value>
+                </systemProperty>
+              </systemProperties>
+              <jvmArguments>-Xss4m --enable-native-access=ALL-UNNAMED</jvmArguments>
+              <commandlineArgs/>
+            </configuration>
           </plugin>
         </plugins>
       </build>
